--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "build-dev":"webpack --mode development --watch "
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,18 @@
   },
   "homepage": "https://github.com/ramonvictorn/trading-Fifa#readme",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "express": "^4.16.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.3.1"
+  },
+  "devDependencies": {}
 }
