--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "build-dev":"webpack --mode development --watch "
+    "build-dev": "webpack --mode development --watch "
   },
   "repository": {
     "type": "git",
@@ -32,5 +32,7 @@
     "webpack": "^4.29.0",
     "webpack-cli": "^3.3.1"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "pg": "^7.10.0"
+  }
 }
