--- a/tests/hello.yml
+++ b/tests/hello.yml
@@ -8,5 +8,5 @@ config:
       x-my-service-auth: '987401838271002188298567'
 scenarios:
   - flow:
-    - get:
-        url: "/ping"
+    - post:
+        url: "/players/getAllPlayers"
