--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
-    "build-dev": "webpack --mode development --watch "
+    "build-dev": "webpack --mode development --watch ",
+    "restoreDb": "./tests/restoreDb.sh"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "body-parser": "^1.19.0",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "react": "^16.8.6",
