--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "body-parser": "^1.19.0",
+    "crypto": "^1.0.1",
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "react": "^16.8.6",
