--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/app.js",
     "build-dev": "webpack --mode development --watch ",
-    "restoreDb": "./tests/restoreDb.sh"
+    "restoreDb": "./tests/restoreDb.sh",
+    "herokuBuild": "npm install && npm run build-dev && npm run start"
   },
   "repository": {
     "type": "git",
