--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-dev": "webpack --mode development --watch ",
     "build-prod": "webpack --mode production",
     "restoreDb": "./tests/restoreDb.sh",
-    "herokuBuild": "npm install && npm run build-prod & npm run start"
+    "herokuBuild": "npm install && webpack --mode production"
   },
   "repository": {
     "type": "git",
