--- a/package.json
+++ b/package.json
@@ -31,14 +31,13 @@
     "css-loader": "^2.1.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
+    "pg": "^7.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "session-file-store": "^1.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
-    "webpack-cli": "^3.3.1",
-    "pg": "^7.10.0"
+    "webpack-cli": "^3.3.1"
   }
-  
 }
