--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
     "css-loader": "^2.1.1",
+    "echarts": "^4.2.1",
     "express": "^4.16.4",
     "express-session": "^1.16.1",
     "pg": "^7.10.0",
