--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.5",
     "body-parser": "^1.19.0",
     "crypto": "^1.0.1",
