--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "pg": "^7.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.1",
     "session-file-store": "^1.2.0",
     "style-loader": "^0.23.1",
