--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-infinite-scroll-component": "^4.5.2",
+    "react-infinite-scroller": "^1.2.4",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.1",
     "session-file-store": "^1.2.0",
