--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-infinite-scroller": "^1.2.4",
     "react-loader-spinner": "^2.3.0",
     "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
     "session-file-store": "^1.2.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
